# eide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  experiment.yml
src/eide/: __init__.py
src/eide/capture/: base.py  context.py  decorator.py  manual.py  mlflow_adapter.py  resource_monitor.py
src/eide/causal/: attribution.py
src/eide/cli/: __main__.py  advise.py  dashboard.py  diff.py  explain.py  export_import.py  graph.py  main.py  replay.py  run.py  search.py  serve.py  tag.py
src/eide/core/: diff.py  ir.py  types.py
src/eide/dashboard/: app.py
src/eide/dashboard/templates/: base.html  create.html  diff.html  error.html  experiment_detail.html  experiments.html  graph.html  index.html  replay.html
src/eide/diff/: engine.py  environment.py  parameter.py  semantic.py  structural.py
src/eide/graph/: builder.py  queries.py
src/eide/intelligence/: advisor.py
src/eide/mcp/: server.py
src/eide/replay/: engine.py  environment.py  executor.py  verifier.py
src/eide/storage/: filestore.py
tests/: conftest.py  test_capture.py  test_cli.py  test_dashboard.py  test_e2e.py  test_eide.py  test_export_import.py  test_frontend.py  test_graph.py  test_impact.py  test_integration.py  test_intelligence.py  test_js.py  test_mcp.py  test_mlflow.py  test_mlflow_adapter.py  test_replay.py  test_search.py
