[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eide-core"
version = "1.0.0"
description = "Experiment Intelligence & Diff Engine - understand why experiments differ"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "EIDE Contributors" },
]

dependencies = [
  "pydantic>=2.0",
  "click>=8.0",
  "rich>=13.0",
  "scipy>=1.10",
  "scikit-image>=0.20",
  "networkx>=3.0",
  "mcp>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
full = ["psutil>=5.0", "mlflow>=2.0"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.0"]
all = ["eide-core[full]", "eide-core[dashboard]"]

[project.scripts]
eide = "eide.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/eide"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "anyio: mark test as async (trio or asyncio)",
]

[tool.mypy]
strict = false
python_version = "3.12"
ignore_missing_imports = true
